--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -34,10 +34,10 @@
         <a class="nav-link" href=" / ">Homepage & Login<span class="sr-only">(current)</span></a>
       </li>
         <li class="nav-item active">
-        <a class="nav-link" href="account/new">Register<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/register">Register<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="api/accounts">Search Accounts<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/accounts">Search Accounts<span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
