Fix: Removed header title

--- a/app/templates/accounts.html
+++ b/app/templates/accounts.html
@@ -13,7 +13,7 @@
     <tbody>
     {% for Account in Accounts %}
     <tr>
-        <td><a href="view/{{Account.id}}">{{ Account.Username }}</a></td>
+        <td>{{ Account.Username }}</td>
         <td>{{ Account.Password }}</td>
         <td>{{ Account.First_Name }}</td>
         <td>{{ Account.Last_Name }}</td>
