--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -33,22 +33,38 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="signin.css" rel="stylesheet">
+    <link href="signandregister.css" rel="stylesheet">
   </head>
   <body class="text-center">
-    <form class="form-signin">
+    <form class="form-signin" action="/" method="post">
+    {% if status %}
+    <div class="alert alert-success" role="alert">
+        {{ status }}
+          </div>
+    {% endif %}
   <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-  <label for="inputEmail" class="sr-only">Email address</label>
-  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-  <label for="inputPassword" class="sr-only">Password</label>
-  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+
+  <label for="Email" class="sr-only">Email address</label>
+  <input type="email" id="Email" class="form-control" placeholder="Email address" required autofocus>
+
+  <label for="Password" class="sr-only">Password</label>
+  <input type="password" id="Password" class="form-control" placeholder="Password" required>
+
+  <div style="text-align: center">
+    <p class="mb-1 font-weight-light" style="color: red">{{ response }}</p>
+  </div>
+
   <div class="checkbox mb-3">
     <label>
       <input type="checkbox" value="remember-me"> Remember me
     </label>
   </div>
+
   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  <p class="mt-5 mb-3 text-muted">&copy; 2017-2020</p>
+
+      <a href="/register" class="card-link btn btn-lg btn-primary btn-block">Create an Account</a>
+
+
 </form>
 </body>
 </html>
