--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v4.0.1">
-    <title>Register Template · Bootstrap</title>
+    <title>Registration Template</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/sign-in/">
 
@@ -33,29 +33,40 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="signin.css" rel="stylesheet">
+    <link href="signandregister.css" rel="stylesheet">
   </head>
   <body class="text-center">
-    <form class="form-signin">
+  <form class="form-signin" action="/register" method="post">
   <h1 class="h3 mb-3 font-weight-normal">Please Register</h1>
 
-  <label for="Username" class="sr-only">Username</label>
-         <input type="Username" id="Username" class="form-control" placeholder="Username" required autofocus>
-  <label for="inputpassword" class="sr-only">Password</label>
-        <input type="inputpassword" id="inputpassword" class="form-control" placeholder="Password" required>
   <label for="First_Name" class="sr-only">First Name</label>
-        <input type="First_Name" id="First_Name" class="form-control" placeholder="First Name" required autofocus>
+        <input type="text" id="First_Name" class="form-control" placeholder="First Name" required autofocus>
+
   <label for="Last_Name" class="sr-only">Last Name</label>
-        <input type="Last_Name" id="Last_Name" class="form-control" placeholder="Last Name" required autofocus>
-  <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="inputemail" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <input type="text" id="Last_Name" class="form-control" placeholder="Last Name" required autofocus>
+
+  <label for="Email" class="sr-only">Email address</label>
+        <input type="email" id="Email" class="form-control" placeholder="Email address" required autofocus>
+
+  <label for="Password" class="sr-only">Password</label>
+        <input type="password" id="Password" class="form-control" placeholder="Password" required>
+
+  <div style="text-align: center">
+      <p class="mb-1 font-weight-light" style="color: red">{{ response }}</p>
+      <p class="mb-1 font-weight-light" style="color: limegreen">{{ response_s }}</p>
+  </div>
+
   <div class="checkbox mb-3">
     <label>
       <input type="checkbox" value="terms"> I have read the terms and conditions.
     </label>
   </div>
   <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
-  <p class="mt-5 mb-3 text-muted">&copy; 2017-2020</p>
+
+        <div class="msg">{{ msg }}</div>
+
+<!--    Please check email to verify account-->
+
 </form>
 </body>
 </html>
