--- a/FinalProject/templates/layout.html
+++ b/FinalProject/templates/layout.html
@@ -35,6 +35,10 @@
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="/accounts">Search Accounts<span class="sr-only">(current)</span></a>
+
+       <li class="nav-item active">
+        <a class="nav-link" href="/calendar">Calendar<span class="sr-only">(current)</span></a>
+
       </li>
     </ul>
   </div>
