--- a/FinalProject/templates/login.html
+++ b/FinalProject/templates/login.html
@@ -36,7 +36,7 @@
     <link href="signandregister.css" rel="stylesheet">
   </head>
   <body class="text-center">
-    <form class="form-signin" action="/" method="post">
+    <form class="form-login" action="/" method="post">
     {% if status %}
     <div class="alert alert-success" role="alert">
         {{ status }}
@@ -44,11 +44,12 @@
     {% endif %}
   <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
 
-  <label for="Email" class="sr-only">Email address</label>
-  <input type="email" id="Email" class="form-control" placeholder="Email address" required autofocus>
+  <label for="inputEmail" class="sr-only">Email address</label>
+  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" name="inputEmail"
+         required autofocus>
 
-  <label for="Password" class="sr-only">Password</label>
-  <input type="password" id="Password" class="form-control" placeholder="Password" required>
+  <label for="inputPassword" class="sr-only">Password</label>
+  <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="inputPassword" required>
 
   <div style="text-align: center">
     <p class="mb-1 font-weight-light" style="color: red">{{ response }}</p>
